<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Sim</string>

    <string name="cancel">cancel</string>
    <string name="ok">OK</string>
    <string name="exit">Press again to exit the program!</string>
    <string name="confirm_logout">Are you sure to log out?</string>
    <string name="no_more">No more content!</string>
    <string name="search">Search</string>
    <string name="details">Details</string>

    <string name="bus">Bus</string>
    <string name="wangyi">NetEase</string>
    <string name="record">Record</string>
    <string name="user">User</string>

    <string name="user_login">user login</string>
    <string name="user_detail">detail</string>
    <string name="user_setting">setting</string>
    <string name="login_no">not logIn</string>
    <string name="enter_password">Please input password!</string>
    <string name="enter_username">Please input Username!</string>
    <string name="login_success">login successful!</string>
    <string name="login_fail">Login failed!</string>
    <string name="login_fail_for_username_or_password">username or password incorrect!</string>
    <string name="login_fail_password">Wrong password!</string>
    <string name="username_no_null">Username can not be empty!</string>
    <string name="password_no_null">Password can not be empty!</string>
    <string name="phone_no_null">Please enter the correct phone number!</string>
    <string name="email_no_null">Please enter the correct email address!</string>
    <string name="register_success">Registration success!</string>
    <string name="register_fail">Registration failed!</string>
    <string name="register_fail_username">The account has been registered!</string>
    <string name="register_fail_phone">The phone number has been registered!</string>
    <string name="register_fail_email">The email has been registered!</string>
    <string name="register">register</string>
    <string name="login">logIn</string>
    <string name="logout">logOut</string>
    <string name="username">account number</string>
    <string name="password">password</string>
    <string name="phone">phone</string>
    <string name="email">email</string>
    <string name="inconsistent">The new password input is inconsistent!</string>
    <string name="update_success">Update successful!</string>
    <string name="update_fail">Update failed!</string>
    <string name="user_info">user info</string>
    <string name="update_password">update password</string>
    <string name="old_password">old password</string>
    <string name="new_password">new Password</string>
    <string name="again">input again</string>
    <string name="new_email">new email</string>
    <string name="email_verified_no">Click to verify email</string>
    <string name="email_verified_yes">The current mailbox has been verified</string>


    <string name="BusRealTime">RealTime Bus</string>
    <string name="BusRoute">Bus Route</string>
    <string name="BusStation">Bus Station</string>
    <string name="getLineListByLineName_fail">Error searching real-time transit directions request!</string>
    <string name="getStartLocation_fail">Error in location request!</string>
    <string name="getLocation_fail">Error requesting location information!</string>
    <string name="getRoute_fail">Travel plan request error!</string>
    <string name="getRoute_no">No transfer information was found!</string>
    <string name="getStationList_fail">Error getting bus route stop request!</string>
    <string name="getBusListOnRoad_fail">An error occurred in the request to obtain real-time bus data!</string>
    <string name="bus_real_time_search">Real-time bus search</string>
    <string name="bus_stara_time">start:</string>
    <string name="bus_end_time">end:</string>
    <string name="bus_price">price:</string>
    <string name="bus_transfer_plan">Transfer plan</string>
    <string name="no_data">No data</string>

    <string name="year">year</string>
    <string name="month">month</string>
    <string name="day">day</string>
    <string name="late">late</string>
    <string name="leave_early">leave early</string>
    <string name="record_no">not-record</string>
    <string name="record_success">Record success!</string>
    <string name="record_failure">Record_failure!</string>
    <string name="record_update">Record update time!</string>
    <string name="record_only_today">Only record in on the day!</string>
    <string name="record_week">Record in on the weekend?</string>
    <string name="record_start">clock in</string>
    <string name="record_end">clock out</string>
    <string name="record_all">record all</string>
    <string name="record_add_memo">add notes</string>
    <string name="record_add_memo_success">Add note success!</string>
    <string name="record_add_memo_fail">Add note failed!</string>

</resources>