<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="350dp"
    android:layout_height="380dp"
    android:background="@drawable/popup_layout_bg"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/textViewStyle"
        android:text="@string/update_password" />

    <LinearLayout
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_old_password"
            style="@style/editViewStyle"
            android:background="@drawable/edit_bg"
            android:hint="@string/old_password"
            android:inputType="numberPassword"
            android:maxLength="20" />

        <EditText
            android:id="@+id/et_new_password"
            style="@style/editViewStyle"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/new_password"
            android:inputType="numberPassword"
            android:maxLength="20" />

        <EditText
            android:id="@+id/et_new_password_again"
            style="@style/editViewStyle"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_bg"
            android:hint="@string/again"
            android:inputType="numberPassword"
            android:maxLength="20" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center">

        <Button
            android:id="@+id/btn_password_cancel"
            style="@style/buttonStyle"
            android:background="@drawable/button_bg"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_password_confirm"
            style="@style/buttonStyle"
            android:layout_marginLeft="30dp"
            android:background="@drawable/button_bg"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>