<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="330dp"
    android:background="@drawable/card_shape_gray"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        style="@style/textViewStyle"
        android:text="@string/update_password" />

    <TextView
        android:id="@+id/tv_old_email"
        style="@style/textViewStyle"
        android:layout_marginTop="20dp"
        tools:text="123456789@qq.com" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_old_email_verified"
            style="@style/textViewStyleGray"
            android:text="@string/email_verified_no" />

        <ImageView
            android:id="@+id/iv_refresh"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/refresh_bg" />

    </LinearLayout>

    <EditText
        android:id="@+id/et_new_email"
        style="@style/editViewStyle"
        android:layout_marginLeft="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/new_email" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp">

        <Button
            android:id="@+id/btn_email_cancel"
            style="@style/buttonStyle"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_email_confirm"
            style="@style/buttonStyle"
            android:layout_marginLeft="20dp"
            android:text="@string/ok" />

    </LinearLayout>

</LinearLayout>