<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.sim.traveltool.ui.view.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftImageSrc="@mipmap/ic_to_left"
        app:rightImageSrc="@mipmap/ic_bus_refresh_blue"
        app:showLeft="true"
        app:showRight="true"
        app:title="@string/bus_real_time_search" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp">

        <ImageView
            android:id="@+id/iv_reverse"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:src="@mipmap/ic_reverse_white" />

        <TextView
            android:id="@+id/tv_from_station"
            style="@style/textViewStyle"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"
            android:layout_toLeftOf="@+id/iv_reverse"
            tools:text="起点站" />

        <TextView
            android:id="@+id/tv_to_station"
            style="@style/textViewStyle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:layout_toRightOf="@+id/iv_reverse"
            tools:text="终点站" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            style="@style/textViewStyleGray"
            android:text="@string/bus_stara_time" />

        <TextView
            android:id="@+id/tv_begin_time"
            style="@style/textViewStyleGray"
            tools:text="06:00" />

        <TextView
            style="@style/textViewStyleGray"
            android:layout_marginLeft="10dp"
            android:text="@string/bus_end_time" />

        <TextView
            android:id="@+id/tv_end_time"
            style="@style/textViewStyleGray"
            tools:text="23:00" />

        <TextView
            style="@style/textViewStyleGray"
            android:layout_marginLeft="10dp"
            android:text="@string/bus_price" />

        <TextView
            android:id="@+id/tv_price"
            style="@style/textViewStyleGray"
            tools:text="1元" />

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rl_station_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp" />

</LinearLayout>