<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.sim.traveltool.ui.view.TitleView
        android:id="@+id/titleView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:leftImageSrc="@mipmap/ic_to_left"
        app:showLeft="true"
        app:title="@string/user_info" />

    <RelativeLayout
        android:id="@+id/rl_user_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_shape_gray"
        android:padding="20dp">

        <TextView
            style="@style/textViewStyle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/username" />

        <TextView
            android:id="@+id/tv_user_name"
            style="@style/textViewStyleGray"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/iv_user_name_go"
            tools:text="Sim" />

        <ImageView
            android:id="@+id/iv_user_name_go"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_shape_gray"
        android:padding="20dp">

        <TextView
            style="@style/textViewStyle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/password" />

        <TextView
            android:id="@+id/tv_password"
            style="@style/textViewStyleGray"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/iv_password_go"
            android:text="******" />

        <ImageView
            android:id="@+id/iv_password_go"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_to_right" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_mobile_phone_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_shape_gray"
        android:padding="20dp">

        <TextView
            style="@style/textViewStyle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/phone" />

        <TextView
            android:id="@+id/tv_mobile_phone_number"
            style="@style/textViewStyleGray"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/iv_mobile_phone_number_go"
            tools:text="13411094382" />

        <ImageView
            android:id="@+id/iv_mobile_phone_number_go"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_to_right" />

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card_shape_gray"
        android:padding="20dp">

        <TextView
            style="@style/textViewStyle"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            android:text="@string/email" />

        <TextView
            android:id="@+id/tv_email"
            style="@style/textViewStyleGray"
            android:layout_centerVertical="true"
            android:layout_marginRight="10dp"
            android:layout_toLeftOf="@+id/iv_email_go"
            tools:text="hellosim@aliyun.com" />

        <ImageView
            android:id="@+id/iv_email_go"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:src="@mipmap/ic_to_right" />

    </RelativeLayout>

    <Button
        android:id="@+id/btn_log_out"
        style="@style/buttonStyle"
        android:layout_width="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/logout" />

</LinearLayout>